--- a/index.css
+++ b/index.css
@@ -123,9 +123,27 @@ main{
     justify-content: center;
 }
 
-.modal-btn{
-    padding: 10px 24px;
-    cursor: pointer;
+.button-31 {
+  background-color: rgb(184, 184, 184);
+  border-radius: 4px;
+  border-style: none;
+  box-sizing: border-box;
+  color: rgb(24, 24, 24);
+  cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  font-weight: 700;
+  overflow: hidden;
+  padding: 9px 20px 8px;
+  text-align: center;
+  touch-action: manipulation;
+}
+
+.button-31:hover,
+.button-31:focus {
+  opacity: .75;
+  color: limegreen;
+  background-color: white;
 }
 
 /* modal input */
@@ -159,6 +177,7 @@ input{
     margin-top: 10px;
     padding: 8px 16px;
     display: flex;
+    gap: 5px;
     justify-content: center;
 }
 
